# Moxnode

./: .gitignore  Cargo.toml  build.bat  creature.go  enhanced_creature_memory.json  go.mod  main.go  run.bat
.Jules/: palette.md
.jules/: bolt.md
src/: creature.rs  decide.rs  main.rs  memory.rs  net.rs  selfwrite.rs  swarm.rs  thought.rs  wired.rs
src/evolution/: config.rs  dreams.rs  ecology.rs  expression.rs  habits.rs  leaps.rs  mod.rs  priorities.rs  rituals.rs  society.rs  state.rs  world.rs
